// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelPane matches snapshot 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.button:not(.selected){background-color:white;}
    .label.label-label-1:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.label-label-1:not(.no-hover):hover,.label.label-label-1.selected{background-color:red;}
    .label.label-label-2.button:not(.selected){background-color:white;}
    .label.label-label-2:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.label-label-2:not(.no-hover):hover,.label.label-label-2.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button label label-label-1"
      id="label-1"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button label label-label-2"
      id="label-2"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;

exports[`LabelPane not editable 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.button:not(.selected){background-color:white;}
    .label.label-label-1:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.label-label-1:not(.no-hover):hover,.label.label-label-1.selected{background-color:red;}
    .label.label-label-2.button:not(.selected){background-color:white;}
    .label.label-label-2:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.label-label-2:not(.no-hover):hover,.label.label-label-2.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <span
      className="label label-label-1 selected"
      id="label-1"
      title="first label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </span>
    <span
      className="label label-label-2"
      id="label-2"
      title="second label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </span>
  </div>
</div>
`;

exports[`LabelPane with selected labels 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.button:not(.selected){background-color:white;}
    .label.label-label-1:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.label-label-1:not(.no-hover):hover,.label.label-label-1.selected{background-color:red;}
    .label.label-label-2.button:not(.selected){background-color:white;}
    .label.label-label-2:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.label-label-2:not(.no-hover):hover,.label.label-label-2.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button label label-label-1 selected"
      id="label-1"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button label label-label-2"
      id="label-2"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;
